frontend/assets/stylesheets/scss/modules/_navigation.scss
.navigation--wrapper {
    background: $color-primary-50;
    position: relative;

    @media (min-width: $breakpoint-30) {
        @include grid(14);
        height: 100vh;
    }

    @media (min-width: $breakpoint-40) {
        @include grid(10);
    }

    @media (min-width: $breakpoint-50) {
        @include grid(8);
    }
}

.navigation {
    margin: 0;
    padding: 0;

    li {
        list-style-type: none;
        border-bottom: 1px solid #6d717e;
        font-size: 16px;

        a {
            color: $white;
            font-weight: bold;
            padding: 20px;
            display: block;

            i {
                color: #6d717e;
                float: right;
            }

            &:hover,
            &.is-active {
                color: $color-primary-30;

                i {
                    color: $color-primary-30;
                }
            }
        }

        &.logout--link {
            position: relative;

            @media (min-width: $breakpoint-30) {
                position: absolute;
                bottom: 0;
                left: 0;
                right: 0;
                border-top: 1px solid #6d717e;
                border-bottom: 0;
            }

        }

        &:first-child {
            border-top: 1px solid #6d717e;
        }
    }

    @media (min-width: $breakpoint-30) {
        margin-top: 8rem;
    }
}

